--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 .body__container {
-    margin-top: 45px;
+    margin-top: 30px;
     margin-right: 0px;
     margin-bottom: 45px;
     margin-left: 10px;
@@ -28,7 +28,10 @@ html {
     max-width: 340px;
     max-height: 520px;
     margin: auto;
-    padding: 15px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
 }
 
 .article__header {
@@ -41,7 +44,7 @@ html {
 }
 
 .article__text {
-    font-size: 14px;
+    font-size: 13px;
     margin-top: 1px;
     line-height: 1.5;
 }
@@ -59,11 +62,11 @@ html {
     text-decoration: none;
 }
 
-.link:hover {
+.article__link:hover {
     text-decoration: underline;
 }
 
-.link:active {
+.article__link:active {
     font-weight: 700;
     text-decoration: none;
 }
