--- a/css/article.css
+++ b/css/article.css
@@ -5,3 +5,31 @@
 .section__langEng {
     display: none;
 }
+.section__header {
+    font-size: 14px;
+    margin-bottom: 1px;
+}
+
+.section__header--main {
+    font-size: 20px;
+}
+
+.section__text {
+    font-size: 13px;
+    margin-top: 1px;
+    line-height: 1.5;
+}
+
+.section__link {
+    color: rgb(10, 126, 0);
+    text-decoration: none;
+}
+
+.section__link:hover {
+    text-decoration: underline;
+}
+
+.section__link:active {
+    font-weight: 700;
+    text-decoration: none;
+}
