--- a/css/article.css
+++ b/css/article.css
@@ -6,15 +6,18 @@
     display: none;
 }
 .section__header {
+    text-indent: 20px;
     font-size: 14px;
     margin-bottom: 1px;
 }
 
 .section__header--main {
+    text-align: center;
     font-size: 20px;
 }
 
 .section__text {
+    text-align: justify;
     font-size: 13px;
     margin-top: 1px;
     line-height: 1.5;
