--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
 }
 
 .body {
+    background-color: #444;
     font-family: 'Courgette', cursive;
     background-image: url("../images/background.jpg");
     resize: both;
