--- a/css/article.css
+++ b/css/article.css
@@ -1,10 +1,7 @@
-.section__langPl {
+.section__hidden {
     display: none;
 }
 
-.section__langEng {
-    display: none;
-}
 .section__header {
     text-indent: 20px;
     font-size: 14px;
