--- a/css/section.css
+++ b/css/section.css
@@ -9,12 +9,12 @@
 .section__foto {
     width: 100px;
     height: inherit;
-    border: 2px solid #3caeb6;
-    border-radius: 50%;
+    border: 2px solid rgb(0, 126, 78);
+    border-radius: 35%;
     position: fixed;
-    margin-left: -150px;
+    margin-left: -138px;
     margin-top: 0px;
-    box-shadow: -15px 20px 40px 5px #1b1915;
+    box-shadow: 5px -5px 10px 2px hsl(35, 93%, 5%);
 }
 
 .section__button {
@@ -22,17 +22,14 @@
     font-family: sans-serif;
     font-weight: 900;
     width: 100px;
-    border: 2px solid #3caeb6;
+    border: 2px solid rgb(0, 126, 78);
+    border-radius: 3%;
     position: fixed;
-    margin-left: -150px;
+    margin-left: -138px;
     margin-top: 150px;
-    box-shadow: -15px 20px 40px 5px #1b1915;
+    box-shadow: 5px -5px 10px 2px hsl(35, 93%, 5%);
 }
 
 .section__colorActivLang {
     color: #777;
 }
-
-/* .section__buttonTextPl {
-    color: #777;
-} */
