--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,8 @@
 html {
     box-sizing: border-box;
-    width: 110%;
     zoom: 200%;
-}
-
-@media (min-width: 767px) and (max-width: 1200px) {
-    html {
-        zoom: 125%;
-    }
-}
-
-@media (min-width: 425px) and (max-width: 766px) {
-    html {
-        zoom: 70%;
-    }
-}
-
-@media (max-width: 424px) {
-    html {
-        zoom: 50%;
-    }
+    min-width: 650px;
+    margin-left: -125px;
 }
 
 *, ::after, ::before {
@@ -30,7 +13,7 @@ html {
     background-color: #444;
     font-family: 'Courgette', cursive;
     background-image: url("../images/background.jpg");
-    resize: both;
+    resize: auto;
     margin-top: 105px;
     margin-bottom: 140px;
     background-repeat: no-repeat;
