--- a/css/article.css
+++ b/css/article.css
@@ -21,6 +21,10 @@
 }
 
 .section__link {
+    margin: 25px 80px;
+    padding: 5px;
+    display: block;
+    text-align: center;
     color: rgb(0, 126, 78);
     text-decoration: none;
 }
